# Copyright (c) 2022-2026, The Isaac Lab Project Developers (https://github.com/isaac-sim/IsaacLab/blob/main/CONTRIBUTORS.md).
# All rights reserved.
#
# SPDX-License-Identifier: BSD-3-Clause

[build-system]
requires = ["setuptools>=70.0,<82.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "isaaclab_newton"
version = "0.15.1"
description = "Extension providing IsaacLab with Newton specific abstractions."
license = {text = "BSD-3-Clause"}
authors = [{name = "Isaac Lab Project Developers"}]
maintainers = [{name = "Isaac Lab Project Developers"}]
keywords = ["robotics", "simulation", "newton"]
requires-python = ">=3.12"
dependencies = []

[project.urls]
Homepage = "https://github.com/isaac-sim/IsaacLab"
Repository = "https://github.com/isaac-sim/IsaacLab"

[project.optional-dependencies]
all = [
    "prettytable>=3.3.0",
    "PyOpenGL-accelerate>=3.1.0",
    "newton[sim] @ git+https://github.com/newton-physics/newton.git@v1.2.1rc2",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["isaaclab_newton", "isaaclab_newton.*"]

[tool.setuptools.package-data]
"*" = ["*.pyi"]
