# Copyright (c) 2022-2026, The Isaac Lab Project Developers (https://github.com/isaac-sim/IsaacLab/blob/main/CONTRIBUTORS.md).
# All rights reserved.
#
# SPDX-License-Identifier: BSD-3-Clause

[build-system]
requires = ["setuptools>=70.0,<82.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "isaaclab_tasks"
version = "2.0.0"
description = "Extension containing suite of environments for robot learning."
license = {text = "BSD-3-Clause"}
authors = [{name = "Isaac Lab Project Developers"}]
maintainers = [{name = "Isaac Lab Project Developers"}]
keywords = ["robotics", "rl", "il", "learning"]
requires-python = ">=3.12"
dependencies = [
    "numpy>=2",
    "torch>=2.10",
    "torchvision>=0.25.0",
    "protobuf>=4.25.8,!=5.26.0",
    "tensorboard",
    "numba>=0.63.1",
]

[project.urls]
Homepage = "https://github.com/isaac-sim/IsaacLab"
Repository = "https://github.com/isaac-sim/IsaacLab"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["isaaclab_tasks", "isaaclab_tasks.*"]

[tool.setuptools.package-data]
"*" = ["*.pyi"]
