# Copyright (c) 2022-2026, The Isaac Lab Project Developers (https://github.com/isaac-sim/IsaacLab/blob/main/CONTRIBUTORS.md).
# All rights reserved.
#
# SPDX-License-Identifier: BSD-3-Clause

[build-system]
requires = ["setuptools>=70.0,<82.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "isaaclab_tasks_experimental"
version = "0.0.1"
description = "Extension containing suite of experimental environments for robot learning."
license = {text = "BSD-3-Clause"}
authors = [{name = "Isaac Lab Project Developers"}]
maintainers = [{name = "Isaac Lab Project Developers"}]
keywords = ["robotics", "rl", "il", "learning"]
requires-python = ">=3.12"
dependencies = [
    "isaaclab_tasks",
]

[project.urls]
Homepage = "https://github.com/isaac-sim/IsaacLab"
Repository = "https://github.com/isaac-sim/IsaacLab"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["isaaclab_tasks_experimental", "isaaclab_tasks_experimental.*"]

[tool.setuptools.package-data]
"*" = ["*.pyi", "*.usd", "*.usda", "assets/*.usd", "assets/*.usda"]
