# Copyright (c) 2022-2026, The Isaac Lab Project Developers (https://github.com/isaac-sim/IsaacLab/blob/main/CONTRIBUTORS.md).
# All rights reserved.
#
# SPDX-License-Identifier: BSD-3-Clause

[build-system]
requires = ["setuptools>=70.0,<82.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "isaaclab-visualizers"
version = "0.1.3"
description = "Visualizer backends for Isaac Lab (Kit, Newton, Rerun, Viser)."
license = {text = "BSD-3-Clause"}
authors = [{name = "Isaac Lab Project Developers"}]
maintainers = [{name = "Isaac Lab Project Developers"}]
keywords = ["robotics", "simulation", "visualization"]
requires-python = ">=3.12"
dependencies = [
    "isaaclab",
    "numpy",
]

[project.urls]
Homepage = "https://github.com/isaac-sim/IsaacLab"
Repository = "https://github.com/isaac-sim/IsaacLab"

[project.optional-dependencies]
kit = []
newton = [
    "warp-lang",
    "newton[sim] @ git+https://github.com/newton-physics/newton.git@v1.2.1rc2",
    "PyOpenGL-accelerate",
    "imgui-bundle>=1.92.5",
    "typing-extensions>=4.15.0",
]
rerun = [
    "newton[sim] @ git+https://github.com/newton-physics/newton.git@v1.2.1rc2",
    "rerun-sdk>=0.29.0",
    "pyarrow==22.0.0",
]
viser = [
    "newton[sim] @ git+https://github.com/newton-physics/newton.git@v1.2.1rc2",
    "viser>=1.0.16",
]
all = [
    "imgui-bundle>=1.92.5",
    "newton[sim] @ git+https://github.com/newton-physics/newton.git@v1.2.1rc2",
    "PyOpenGL-accelerate",
    # Match rerun-sdk's supported Arrow stack and avoid resolver drift across environments.
    "pyarrow==22.0.0",
    "rerun-sdk>=0.29.0",
    "typing-extensions>=4.15.0",
    "viser>=1.0.16",
    "warp-lang",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["isaaclab_visualizers", "isaaclab_visualizers.*"]

[tool.setuptools.package-data]
"*" = ["*.pyi"]
